lxqt-session-1.1.1 / 2022-05-08
================================
 * Added `qtxdg-tools` as a dependency (to be used by `xdg-utils` under LXQt Session).

lxqt-session-1.1.0 / 2022-04-15
================================
 * Removed obsolete kdm session file.
 * Add NetBSD support.
 * Fixed typos in procreaper warning messages.
 * Added an option for global screen scaling.
 * Changed default icon theme to breeze.
 * Prevented cut text in header of Environment page.
 * Set Clearlooks as the default LXQt theme.

lxqt-session-1.0.1 / 2022-01-01
================================
 * Restart failed modules with exit codes other than 0.

lxqt-session-1.0.0 / 2021-11-04
================================
 * Updated AUTHORS.
 * Bumped minimum required Qt version to 5.15.

lxqt-session-0.17.1 / 2021-04-16
================================
  * Fixed compilation against Qt < 5.15.

lxqt-session-0.17.0 / 2021-04-15
================================
  * Code cleanup and modernization (use const references where possible, fix possible use of uninitialized variables, removing deprectaed methods, etc.).
  * Remove Openbox configuration for WM agnosticism.
  * Completely moved to Qt5 signal/slot syntax.
  * Become subreaper and end children on finishing session.

lxqt-session-0.16.0 / 2020-11-01
================================
  * Don't use deprecated QProcess methods.
  * Don't use 0/nullptr to initialize QFlags.
  * Removed Default Applications page.

lxqt-session-0.15.0 / 2020-04-22
================================
  * Bumped version to 0.15.0.
  * C++11 code updates.
  * Removed redundant variable SAL_USE_VCLPLUGIN from startlxqt.
  * Fixed lxqt-session memory leak (triggered by wine and specific games).
  * Remove deprecated QDesktopWidget.
  * Corrected dialog location with muti-screen setups.

lxqt-session-0.14.1 / 2019-02-25
================================

  * Bumped version to 0.14.1
  * Only translations was changed.

lxqt-session-0.14.0 / 2019-01-25